--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gsap": "^2.1.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "react-spring": "^8.0.18",
+    "react-transition-group": "^2.7.1",
     "styled-components": "^4.2.0"
   },
   "scripts": {
-    "hot": "webpack-dev-server --hot",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
